<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditActivity">


        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_my_form_edit"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgImage"
            android:layout_width="248dp"
            android:layout_height="112dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvTitle"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/txt_image_description" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_name"
            android:maxLength="20"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgImage" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_last_name"
            android:maxLength="30"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <Spinner
            android:id="@+id/spnGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:entries="@array/genders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

        <RadioGroup
            android:id="@+id/rgdDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnGender" >
            <RadioButton
                android:id="@+id/rdbUnfinishedStudies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_unfinised_studies">

            </RadioButton>
            <RadioButton
                android:id="@+id/rdbUniversityIntern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_university_intent">

            </RadioButton>
            <RadioButton
                android:id="@+id/rdbFinisehdStudies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_finished_studies">

            </RadioButton>
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="440dp"/>

        <CheckBox
            android:id="@+id/ckbRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_read"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <CheckBox
            android:id="@+id/ckbTravel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_travel"
            app:layout_constraintStart_toEndOf="@+id/ckbRead"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <CheckBox
            android:id="@+id/ckbSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_sport"
            app:layout_constraintStart_toEndOf="@+id/ckbTravel"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtFinancialAssistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_financial_help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_save"
            android:background="@color/main_color"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swtFinancialAssistance" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>